@@ -1,5 +1,5 @@
 PRJDIR = ..
-BUILDDIR=../../bin/
+BUILDDIR=../../bin
 include $(PRJDIR)/Makefile.common
 
 PORTS = z80 gbz80
@@ -9,16 +9,16 @@ all:
 	$(MAKE) -C z80 _as-z80 _as-gbz80 E=$(E) BUILDDIR=$(BUILDDIR)
 
 install: all install-doc
-	$(INSTALL) $(PRJDIR)/bin/as-z80 `echo $(bindir)/as-z80|sed '$(transform)'`
-	$(STRIP) `echo $(bindir)/as-z80|sed '$(transform)'`
-	$(INSTALL) $(PRJDIR)/bin/as-gbz80 `echo $(bindir)/as-gbz80|sed '$(transform)'`
-	$(STRIP) `echo $(bindir)/as-gbz80|sed '$(transform)'`
+	$(INSTALL) $(PRJDIR)/bin/as-z80$(EXEEXT) `echo $(bindir)/as-z80$(EXEEXT)|sed '$(transform)'`
+	$(STRIP) `echo $(bindir)/as-z80$(EXEEXT)|sed '$(transform)'`
+	$(INSTALL) $(PRJDIR)/bin/as-gbz80$(EXEEXT) `echo $(bindir)/as-gbz80$(EXEEXT)|sed '$(transform)'`
+	$(STRIP) `echo $(bindir)/as-gbz80$(EXEEXT)|sed '$(transform)'`
 
 install-doc:
 	$(INSTALL) -d $(docdir)/aslink
 	cp -f `find doc -maxdepth 1 -not -type d` $(docdir)/aslink
 
 uninstall:
-	cd $(bindir); rm -f as-z80 as-gbz80
+	cd $(bindir); rm -f as-z80$(EXEEXT) as-gbz80$(EXEEXT)
 
 include clean.mk
